[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "productive-mcp"
version = "0.3.0"
description = "Simple MCP server to access the Productive API (activity,projects, pages, tasks, comments, todo-lists)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "druellan", email = "druellan@ecimtech.com"}
]
keywords = ["productive", "mcp", "tasks", "comments", "todos"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "fastmcp>=2.12.3",
    "httpx>=0.28.1",
    "bleach>=6.0.0",
    "python-toon>=0.1.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.0"
version_files = [
    "pyproject.toml:version",
    "server.py:version"
]
tag_format = "v$version"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
