[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "productive-mcp"
version = "0.3.0"
description = "Simple MCP server to access the Productive API (activity,projects, pages, tasks, comments, todo-lists)."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "druellan", email = "dario.ruellan@gmail.com"}
]
keywords = ["productive", "mcp", "tasks", "comments", "todos"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
dependencies = [
    "fastmcp>=3.2.4",
    "httpx>=0.28.1",
    "bleach>=6.0.0",
    "python-toon>=0.1.0",
]

[project.scripts]
productive-mcp = "server:mcp"

[tool.setuptools]
package-dir = {"" = "."}
py-modules = ["server", "config", "productive_client", "tools", "utils"]
