[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "productive-mcp"
version = "0.3.0"
description = "Simple MCP server to access the Productive API (activity,projects, pages, tasks, comments, todo-lists)."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "druellan", email = "dario.ruellan@gmail.com"}
]
keywords = ["productive", "mcp", "tasks", "comments", "todos"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
dependencies = [ 
    "fastmcp>=3.2.4",
    "httpx>=0.28.1",
    "bleach>=6.0.0",
    "python-toon>=0.1.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
]

[project.scripts]
productive-mcp = "server:main"

[project.urls]
Homepage = "https://github.com/druellan/productive-mcp"
Repository = "https://github.com/druellan/productive-mcp"
Documentation = "https://github.com/druellan/productive-mcp#readme"

[tool.setuptools]
py-modules = ["server", "config", "productive_client", "tools", "utils"]
